--- a/src/content/artwork/chip-oc-2021/index.mdx
+++ b/src/content/artwork/chip-oc-2021/index.mdx
@@ -1,8 +1,13 @@
 ---
-title: "chip character 2021"
-description: "chip 2021 character art"
-date: "2021-02-04"
-type: "art"
-images: ["./chip-oc-2021-1.webp", "./chip-oc-2021-2.webp", "./chip-oc-2021-3.webp", "./chip-oc-2021-4.webp"]
+title: 'chip character 2021'
+description: 'chip 2021 character art'
+date: '2021-02-04'
+type: 'art'
+images:
+  [
+    './chip-oc-2021-1.webp',
+    './chip-oc-2021-2.webp',
+    './chip-oc-2021-3.webp',
+    './chip-oc-2021-4.webp',
+  ]
 ---
-
