--- a/src/content/artwork/chowder-shit/index.mdx
+++ b/src/content/artwork/chowder-shit/index.mdx
@@ -1,8 +1,13 @@
 ---
-title: "chowder shit"
-description: "scrapped chowder animation art"
-date: "2021-10-28"
-type: "art"
-images: ["./chowder-1.webp", "./chowder-2.webp", "./chowder-3.webp", "./chowder-4.webp"]
+title: 'chowder shit'
+description: 'scrapped chowder animation art'
+date: '2021-10-28'
+type: 'art'
+images:
+  [
+    './chowder-1.webp',
+    './chowder-2.webp',
+    './chowder-3.webp',
+    './chowder-4.webp',
+  ]
 ---
-
