--- a/src/content/artwork/dr-rotten/index.mdx
+++ b/src/content/artwork/dr-rotten/index.mdx
@@ -1,8 +1,7 @@
 ---
-title: "dr rotten"
-description: "its literally the guy from dr underpants"
-date: "2022-02-04"
-type: "art"
-images: ["./dr-rotten-1.webp", "./dr-rotten-2.webp", "./dr-rotten-3.webp"]
+title: 'dr rotten'
+description: 'its literally the guy from dr underpants'
+date: '2022-02-04'
+type: 'art'
+images: ['./dr-rotten-1.webp', './dr-rotten-2.webp', './dr-rotten-3.webp']
 ---
-
