--- a/src/content/artwork/exeter/index.mdx
+++ b/src/content/artwork/exeter/index.mdx
@@ -1,8 +1,7 @@
 ---
-title: "exeter"
-description: "pyramid country fanart"
-date: "2022-04-06"
-type: "art"
-images: ["./exeter-1.webp", "./exeter-2.webp", "./exeter-doodle.webp"]
+title: 'exeter'
+description: 'pyramid country fanart'
+date: '2022-04-06'
+type: 'art'
+images: ['./exeter-1.webp', './exeter-2.webp', './exeter-doodle.webp']
 ---
-
