--- a/src/content/artwork/highway-view/index.mdx
+++ b/src/content/artwork/highway-view/index.mdx
@@ -1,8 +1,7 @@
 ---
-title: "highway view"
-description: "colorado landscape"
-date: "2022-09-22"
-type: "art"
-images: ["./highway-view.webp"]
+title: 'highway view'
+description: 'colorado landscape'
+date: '2022-09-22'
+type: 'art'
+images: ['./highway-view.webp']
 ---
-
