--- a/src/content/artwork/home-mv-boards/index.mdx
+++ b/src/content/artwork/home-mv-boards/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: "home MV boards"
-description: "concept boards for HOME music video"
-date: "2023-01-02"
-type: "art"
-images: ["./home-storyboard-1.webp", "home-storyboard-3.webp"]
+title: 'home MV boards'
+description: 'concept boards for HOME music video'
+date: '2023-01-02'
+type: 'art'
+images: ['./home-storyboard-1.webp', 'home-storyboard-3.webp']
 ---
