--- a/src/content/artwork/home-mv-doodles/index.mdx
+++ b/src/content/artwork/home-mv-doodles/index.mdx
@@ -1,7 +1,15 @@
 ---
-title: "home MV doodles"
-description: "doodles for HOME music video"
-date: "2023-11-02"
-type: "art"
-images: ["./home-mv-doodle-1.webp", "./home-mv-doodle-2.webp", "./home-mv-doodle-3.webp", "./home-mv-doodle-4.webp", "./home-mv-doodle-5.webp", "./home-mv-doodle-6.webp"]
+title: 'home MV doodles'
+description: 'doodles for HOME music video'
+date: '2023-11-02'
+type: 'art'
+images:
+  [
+    './home-mv-doodle-1.webp',
+    './home-mv-doodle-2.webp',
+    './home-mv-doodle-3.webp',
+    './home-mv-doodle-4.webp',
+    './home-mv-doodle-5.webp',
+    './home-mv-doodle-6.webp',
+  ]
 ---
