--- a/src/content/artwork/laramie-map/index.mdx
+++ b/src/content/artwork/laramie-map/index.mdx
@@ -1,8 +1,7 @@
 ---
-title: "laramie map"
-description: "map of laramie"
-date: "2019-09-04"
-type: "art"
-images: ["./laramie-map-1.webp", "./laramie-map-3.webp"]
+title: 'laramie map'
+description: 'map of laramie'
+date: '2019-09-04'
+type: 'art'
+images: ['./laramie-map-1.webp', './laramie-map-3.webp']
 ---
-
