--- a/src/content/artwork/sports-freak/index.mdx
+++ b/src/content/artwork/sports-freak/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Sports Freak"
+title: 'Sports Freak'
 description: "Hugh's big debut"
-date: "2020-05-21"
-type: "webcomic"
-images: ["./sports-freak.png"]
+date: '2020-05-21'
+type: 'webcomic'
+images: ['./sports-freak.png']
 ---
 
 Optional additional content or description about the artwork...
