--- a/src/content/artwork/stateside-crt/index.mdx
+++ b/src/content/artwork/stateside-crt/index.mdx
@@ -1,8 +1,7 @@
 ---
-title: "stateside crt experiments"
-description: "fun with crts"
-date: "2022-03-20"
-type: "art"
-images: ["./stateside-crt-1.webp", "./stateside-crt-2.webp"]
+title: 'stateside crt experiments'
+description: 'fun with crts'
+date: '2022-03-20'
+type: 'art'
+images: ['./stateside-crt-1.webp', './stateside-crt-2.webp']
 ---
-
