--- a/src/content/artwork/war-years/index.mdx
+++ b/src/content/artwork/war-years/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: "WAR YEARS"
-description: "album cover for demos"
-date: "2024-10-02"
-type: "art"
-images: ["./war-years.webp"]
+title: 'WAR YEARS'
+description: 'album cover for demos'
+date: '2024-10-02'
+type: 'art'
+images: ['./war-years.webp']
 ---
