--- a/src/content/blog/dotfiles/index.mdx
+++ b/src/content/blog/dotfiles/index.mdx
@@ -37,10 +37,10 @@ Before I settled on a manual approach, I tried several different dotfile manager
 
 Shell scripts and git.
 
-<video width="100%" controls>
+<video width='100%' controls>
   <source
-    src="https://github.com/user-attachments/assets/349cf1be-8d9a-4163-8b42-4dd68460c806"
-    type="video/webm"
+    src='https://github.com/user-attachments/assets/349cf1be-8d9a-4163-8b42-4dd68460c806'
+    type='video/webm'
   />
   Your browser does not support the video tag.
 </video>
