--- a/src/content/blog/smpearth/index.mdx
+++ b/src/content/blog/smpearth/index.mdx
@@ -23,13 +23,13 @@ tags:
   - dream
 ---
 
-import { YouTube } from 'astro-embed';
-import { Image } from 'astro:assets';
+import { YouTube } from 'astro-embed'
+import { Image } from 'astro:assets'
 
-import Tweet from '@components/Tweet.astro';
-import DiscordMessage from '@components/DiscordMessage.astro';
-import DiscordConversation from '@components/DiscordConversation.astro';
-import ImageCard from '@components/ImageCard.astro';
+import Tweet from '@components/Tweet.astro'
+import DiscordMessage from '@components/DiscordMessage.astro'
+import DiscordConversation from '@components/DiscordConversation.astro'
+import ImageCard from '@components/ImageCard.astro'
 
 <ImageCard
   imagePath='/src/content/blog/smpearth/smpearth-christmas-map.webp'
