--- a/src/content/artwork/chip-oc-2020/index.mdx
+++ b/src/content/artwork/chip-oc-2020/index.mdx
@@ -1,8 +1,13 @@
 ---
-title: "chip character 2020"
-description: "chip 2020 character art"
-date: "2020-02-04"
-type: "art"
-images: ["./chip-oc-2020-1.webp", "./chip-oc-2020-2.webp", "./chip-oc-2020-3.webp", "./chip-oc-2020-4.webp"]
+title: 'chip character 2020'
+description: 'chip 2020 character art'
+date: '2020-02-04'
+type: 'art'
+images:
+  [
+    './chip-oc-2020-1.webp',
+    './chip-oc-2020-2.webp',
+    './chip-oc-2020-3.webp',
+    './chip-oc-2020-4.webp',
+  ]
 ---
-
