--- a/src/content/artwork/chip-oc-2023/index.mdx
+++ b/src/content/artwork/chip-oc-2023/index.mdx
@@ -1,8 +1,16 @@
 ---
-title: "chip character 2023"
-description: "chip character art 2023"
-date: "2023-02-27"
-type: "art"
-images: ["./chip-oc-2023-3.webp", "./chip-oc-2023-1.webp", "./chip-oc-2023-2.webp", "./chip-oc-2023-4.webp", "./chip-oc-2023-5.webp", "./chip-oc-2023-6.webp", "./chip-oc-2023-7.webp"]
+title: 'chip character 2023'
+description: 'chip character art 2023'
+date: '2023-02-27'
+type: 'art'
+images:
+  [
+    './chip-oc-2023-3.webp',
+    './chip-oc-2023-1.webp',
+    './chip-oc-2023-2.webp',
+    './chip-oc-2023-4.webp',
+    './chip-oc-2023-5.webp',
+    './chip-oc-2023-6.webp',
+    './chip-oc-2023-7.webp',
+  ]
 ---
-
