--- a/src/content/artwork/chip-oc-2024/index.mdx
+++ b/src/content/artwork/chip-oc-2024/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: "chip character 2024"
-description: "chip 2024 character art"
-date: "2024-02-04"
-type: "art"
-images: ["./chip-oc-2024-1.webp", "./chip-oc-2024-2.webp", "./chip-oc-2024-3.webp"]
+title: 'chip character 2024'
+description: 'chip 2024 character art'
+date: '2024-02-04'
+type: 'art'
+images:
+  ['./chip-oc-2024-1.webp', './chip-oc-2024-2.webp', './chip-oc-2024-3.webp']
 ---
-
