--- a/src/content/artwork/drumpf/index.mdx
+++ b/src/content/artwork/drumpf/index.mdx
@@ -1,8 +1,7 @@
 ---
-title: "drumpf"
-description: "drumpf portrait"
-date: "2021-05-22"
-type: "art"
-images: ["./drumpf.webp"]
+title: 'drumpf'
+description: 'drumpf portrait'
+date: '2021-05-22'
+type: 'art'
+images: ['./drumpf.webp']
 ---
-
