--- a/src/content/artwork/home-mv-renders/index.mdx
+++ b/src/content/artwork/home-mv-renders/index.mdx
@@ -1,7 +1,14 @@
 ---
-title: "home MV renders"
-description: "concept renders for HOME music video"
-date: "2023-06-13"
-type: "art"
-images: ["./home-render-1.webp", "./home-poster.webp", "./home-render-2.webp", "./home-render-3.webp", "./home-render-4.png"]
+title: 'home MV renders'
+description: 'concept renders for HOME music video'
+date: '2023-06-13'
+type: 'art'
+images:
+  [
+    './home-render-1.webp',
+    './home-poster.webp',
+    './home-render-2.webp',
+    './home-render-3.webp',
+    './home-render-4.png',
+  ]
 ---
