--- a/src/content/artwork/pipca-concepts/index.mdx
+++ b/src/content/artwork/pipca-concepts/index.mdx
@@ -1,8 +1,7 @@
 ---
-title: "pipca game concepts"
-description: "pipca game concept art"
-date: "2023-05-03"
-type: "art"
-images: ["./pipca-concept-2.webp", "./pipca-concept-3.webp"]
+title: 'pipca game concepts'
+description: 'pipca game concept art'
+date: '2023-05-03'
+type: 'art'
+images: ['./pipca-concept-2.webp', './pipca-concept-3.webp']
 ---
-
