--- a/src/content/artwork/stonetoss/index.mdx
+++ b/src/content/artwork/stonetoss/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: "stonetoss"
-description: "A stonetoss fan comic"
-date: "2023-11-17"
-type: "webcomic"
-images: ["./stonetoss.webp"]
+title: 'stonetoss'
+description: 'A stonetoss fan comic'
+date: '2023-11-17'
+type: 'webcomic'
+images: ['./stonetoss.webp']
 ---
