--- a/src/content/artwork/think-back/index.mdx
+++ b/src/content/artwork/think-back/index.mdx
@@ -1,9 +1,8 @@
 ---
-title: "think back"
-description: "xxsquidwardxx 9/11 fanart"
-date: "2024-09-11"
-type: "art"
-images: ["./think-back.webp"]
-thumbnail: "./think-back-thumb.webp"
+title: 'think back'
+description: 'xxsquidwardxx 9/11 fanart'
+date: '2024-09-11'
+type: 'art'
+images: ['./think-back.webp']
+thumbnail: './think-back-thumb.webp'
 ---
-
