added conversion script

--- a/src/content/artwork/home-mv-renders/index.mdx
+++ b/src/content/artwork/home-mv-renders/index.mdx
@@ -9,6 +9,6 @@ images:
     './home-poster.webp',
     './home-render-2.webp',
     './home-render-3.webp',
-    './home-render-4.png',
+    './home-render-4.webp',
   ]
 ---
