--- a/src/content/artwork/sports-freak/index.mdx
+++ b/src/content/artwork/sports-freak/index.mdx
@@ -3,7 +3,7 @@ title: 'Sports Freak'
 description: "Hugh's big debut"
 date: '2020-05-21'
 type: 'webcomic'
-images: ['./sports-freak.png']
+images: ['./sports-freak.webp']
 ---
 
 Optional additional content or description about the artwork...
