--- a/src/content/art/think-back/index.mdx
+++ b/src/content/art/think-back/index.mdx
@@ -3,6 +3,6 @@ title: 'think back'
 description: 'xxsquidwardxx 9/11 fanart'
 publishDate: '2024-09-11'
 type: 'animation'
-images: ['./think-back.webp']
+images: './think-back.webp'
 thumbnail: './think-back-thumb.webp'
 ---
