fixed music layout

--- a/src/content/art/chip-oc-2019/index.mdx
+++ b/src/content/art/chip-oc-2019/index.mdx
@@ -3,5 +3,12 @@ title: 'chip character 2019'
 description: 'chip 2019 character art'
 publishDate: '2019-01-02'
 type: 'illustration'
-images: ['./chip-pfp-2019.webp', './chip-moomin-bite.webp', './chip-toy-ref.webp', './chip-art-bloche.webp', './chip-garfielf-octangula.webp']
+images:
+  [
+    './chip-pfp-2019.webp',
+    './chip-moomin-bite.webp',
+    './chip-toy-ref.webp',
+    './chip-art-bloche.webp',
+    './chip-garfielf-octangula.webp',
+  ]
 ---
