--- a/src/content/art/chip-oc-2023/index.mdx
+++ b/src/content/art/chip-oc-2023/index.mdx
@@ -4,9 +4,5 @@ description: 'chip character art 2023'
 publishDate: '2023-02-27'
 type: 'illustration'
 images:
-  [
-    './chip-pfp.webp',
-    './chip-ref-2023.webp',
-    './chip-ref-variations.webp',
-  ]
+  ['./chip-pfp.webp', './chip-ref-2023.webp', './chip-ref-variations.webp']
 ---
