--- a/src/content/art/friend-doodles/index.mdx
+++ b/src/content/art/friend-doodles/index.mdx
@@ -4,8 +4,5 @@ description: 'friend group drawing'
 publishDate: '2023-04-02'
 type: 'illustration'
 thumbnail: './friend-doodles-thumb.webp'
-images:
-  [
-    './friend-doodles-1.webp',
-  ]
+images: ['./friend-doodles-1.webp']
 ---
