--- a/src/content/art/home-mv-bg/index.mdx
+++ b/src/content/art/home-mv-bg/index.mdx
@@ -9,4 +9,4 @@ images: ['./home-mv-bg-1.webp', './home-mv-bg-2.webp', './home-poster.webp']
 import ContentVideo from '@/components/content/ContentVideo.astro'
 import homeMvOutside from './home-mv-outside.webm'
 
-<ContentVideo src={homeMvOutside} title="home mv outside" />
+<ContentVideo src={homeMvOutside} title='home mv outside' />
