--- a/src/content/art/pipca-game/index.mdx
+++ b/src/content/art/pipca-game/index.mdx
@@ -9,19 +9,18 @@ images: ['./pipca-game-1.webp']
 
 import ContentVideo from '@/components/content/ContentVideo.astro'
 
-<ContentVideo src='bBMeiKm00XQ' title="sgt braphog cutscene" />
+<ContentVideo src='bBMeiKm00XQ' title='sgt braphog cutscene' />
 
-<ContentVideo src='y3aw4iNPpE4' title="menu + overworld gameplay" />
+<ContentVideo src='y3aw4iNPpE4' title='menu + overworld gameplay' />
 
-<ContentVideo src='dkPUjSN_ZQY' title="final dungeon level gameplay" />
+<ContentVideo src='dkPUjSN_ZQY' title='final dungeon level gameplay' />
 
-<ContentVideo src='Em03hu3tLj0' title="prototype gameplay" />
+<ContentVideo src='Em03hu3tLj0' title='prototype gameplay' />
 
-<ContentVideo src='IrcbqCF-iCk' title="cado fight theme (final ver.)" />
+<ContentVideo src='IrcbqCF-iCk' title='cado fight theme (final ver.)' />
 
-<ContentVideo src='IWdiESskzAM' title="cado fight theme (demo 3)" />
+<ContentVideo src='IWdiESskzAM' title='cado fight theme (demo 3)' />
 
-<ContentVideo src='RFr3Kvcqpns' title="cado fight theme (demo 2)" />
+<ContentVideo src='RFr3Kvcqpns' title='cado fight theme (demo 2)' />
 
-<ContentVideo src='W0SxT58XpQA' title="cado fight theme (demo 1)" />
-
+<ContentVideo src='W0SxT58XpQA' title='cado fight theme (demo 1)' />
