--- a/src/content/art/pizza-tower-clone/index.mdx
+++ b/src/content/art/pizza-tower-clone/index.mdx
@@ -9,5 +9,7 @@ images: ['./pizza-tower-clone-thumb.webp']
 
 import ContentVideo from '@/components/content/ContentVideo.astro'
 
-<ContentVideo src='wgQNEXFrkG0' title="godot peppino pizza tower movement clone" />
-
+<ContentVideo
+  src='wgQNEXFrkG0'
+  title='godot peppino pizza tower movement clone'
+/>
