--- a/src/content/blog/smpearth/index.mdx
+++ b/src/content/blog/smpearth/index.mdx
@@ -47,7 +47,11 @@ SMPEarth was the direct successor of two other Minecraft servers:
 
 2. [/int/craft](https://intcraft.wiki/intcraft), a geopolitical roleplaying Minecraft server founded in 2015 by users of 4chan's [/int/](https://www.4chan.org/) board that has had various iterations over the years.
 
-<ContentImage src={'./intcraft-mascot.webp'} style={false} alt='/int/chan, the official mascot of /int/craft' />
+<ContentImage
+  src={'./intcraft-mascot.webp'}
+  style={false}
+  alt='/int/chan, the official mascot of /int/craft'
+/>
 
 It all started when my left testicle swelled up to the size of a grapefruit.
 
@@ -129,10 +133,7 @@ I also pivoted my attention towards the project's marketing and branding, opting
 
 ## The Garden of Eden
 
-<ContentVideo
-  src='yyezbVbQeHY'
-  title='SMPEarth Official Trailer'
-/>
+<ContentVideo src='yyezbVbQeHY' title='SMPEarth Official Trailer' />
 
 Up until this point, I had been hosting the development environment for SMPEarth on my own computer. For the purposes of testing amongst a few friends, it worked just as good as even the priciest dedicated server since Minecraft's infamously single-threaded design bottlenecked even on my consumer-grade CPU.
 
@@ -212,7 +213,11 @@ As I came to learn later, he was much more than just an enthusiastic customer of
 
 To cut a long story short, I don't even know if JoshA20 was a real person.
 
-<ContentImage src='./smpearth-josh-missing.webp' alt="JoshA20's deleted Twitter account" size='sm'/>
+<ContentImage
+  src='./smpearth-josh-missing.webp'
+  alt="JoshA20's deleted Twitter account"
+  size='sm'
+/>
 
 At one time, I genuinely believed that he was a false identity created to astroturf the hosting company's service. Although I wouldn't dare to go _that_ far, mostly for legal reasons, I'd be lying if I said that I wasn't suspicious of his true intentions. To name just a few oddities:
 
