--- a/src/content/art/branding-stuff/index.mdx
+++ b/src/content/art/branding-stuff/index.mdx
@@ -3,20 +3,16 @@ title: 'branding stuff'
 description: 'logo animations and whatnot'
 publishDate: '2023-05-01'
 type: 'illustration'
-images:
-  [
-    './fractalcounty-logo-2.webp',
-    './fractalcounty-logo.webp',
-  ]
+images: ['./fractalcounty-logo-2.webp', './fractalcounty-logo.webp']
 ---
 
 import fractalcountyIntro from './fractalcounty-intro.webm'
 import fractalcountyIntroThumb from './fractalcounty-intro-thumb.webp'
 import ContentVideo from '@/components/content/ContentVideo.astro'
 
-<ContentVideo 
+<ContentVideo
   src={fractalcountyIntro}
-  title="FRACTAL COUNTY intro animation"
+  title='FRACTAL COUNTY intro animation'
   posterImage={fractalcountyIntroThumb}
   autoplay
   loop
