--- a/src/content/art/dogs-mv/index.mdx
+++ b/src/content/art/dogs-mv/index.mdx
@@ -4,8 +4,5 @@ description: '"nouns - dogs" mv wips'
 publishDate: '2022-02-02'
 type: 'animation'
 thumbnail: './dogs-mv-thumb.webp'
-images:
-  [
-    './dogs-mv-thumb.webp',
-  ]
+images: ['./dogs-mv-thumb.webp']
 ---
