--- a/src/content/art/pipca-concepts/index.mdx
+++ b/src/content/art/pipca-concepts/index.mdx
@@ -3,11 +3,12 @@ title: 'pipca game concepts'
 description: 'pipca game concept art'
 publishDate: '2023-05-03'
 type: 'illustration'
-images: [
-  './pipca-concepts-1.webp',
-  './pipca-concepts-2.webp',
-  './pipca-concepts-3.webp',
-  './pipca-concepts-4.webp',
-  './pipca-concepts-5.webp',
-]
+images:
+  [
+    './pipca-concepts-1.webp',
+    './pipca-concepts-2.webp',
+    './pipca-concepts-3.webp',
+    './pipca-concepts-4.webp',
+    './pipca-concepts-5.webp',
+  ]
 ---
