--- a/src/content/blog/dotfiles/index.mdx
+++ b/src/content/blog/dotfiles/index.mdx
@@ -13,7 +13,7 @@ tags:
 icon: 'lucide:sparkles'
 thumbnail: './chips-dotfiles-preview.webp'
 thumbnailStyle: true
-thumbnailCaption: "Chip's Dotfiles"
+thumbnailCaption: "aka my adventure in configuration management"
 thumbnailCaptionType: 'hidden'
 ---
 
