--- a/src/content/blog/smpearth/index.mdx
+++ b/src/content/blog/smpearth/index.mdx
@@ -179,7 +179,7 @@ I'll just say that I didn't get what I paid for.
 
 Here's a transcription of a conversation between me and Wilbur Soot shortly after the server launched:
 
-<DiscordConversation src='/images/blog/smpearth/smpearth-chip-wilbur-msg.png'>
+<DiscordConversation src='/images/blog/smpearth/smpearth-chip-wilbur-msg.webp'>
   <DiscordMessage
     author='chip'
     date='12/11/2019 10:59 PM'
