--- a/src/content/art/branding-stuff/index.mdx
+++ b/src/content/art/branding-stuff/index.mdx
@@ -8,9 +8,9 @@ images: ['./fractalcounty-logo-2.webp', './fractalcounty-logo.webp']
 
 import fractalcountyIntro from './fractalcounty-intro.webm'
 import fractalcountyIntroThumb from './fractalcounty-intro-thumb.webp'
-import ContentVideo from '@/components/content/ContentVideo.astro'
+import Video from '@/components/content/ContentVideo.astro'
 
-<ContentVideo
+<Video
   src={fractalcountyIntro}
   title='FRACTAL COUNTY intro animation'
   posterImage={fractalcountyIntroThumb}
