--- a/src/content/art/home-mv-bg/index.mdx
+++ b/src/content/art/home-mv-bg/index.mdx
@@ -6,10 +6,10 @@ type: 'illustration'
 images: ['./home-mv-bg-1.webp', './home-mv-bg-2.webp', './home-poster.webp']
 ---
 
-import ContentVideo from '@/components/content/ContentVideo.astro'
+import Video from '@/components/content/ContentVideo.astro'
 import homeMvOutside from './home-mv-outside.webm'
 
-<ContentVideo
+<Video
   src={homeMvOutside}
   title='home mv outside'
   posterImage={homeMvOutside}
