--- a/src/content/art/pipca-shitposts/index.mdx
+++ b/src/content/art/pipca-shitposts/index.mdx
@@ -15,10 +15,10 @@ thumbnail: './braphog-dance.webp'
 ---
 
 import braphogDanceThumb from './braphog-dance.webp'
-import ContentVideo from '@/components/content/ContentVideo.astro'
+import Video from '@/components/content/ContentVideo.astro'
 import braphogDance from './braphog-dance.webm'
 
-<ContentVideo
+<Video
   src={braphogDance}
   title='braphog dance'
   autoplay
