--- a/src/content/art/pizza-tower-clone/index.mdx
+++ b/src/content/art/pizza-tower-clone/index.mdx
@@ -7,9 +7,6 @@ thumbnail: './pizza-tower-clone-thumb.webp'
 images: ['./pizza-tower-clone-thumb.webp']
 ---
 
-import ContentVideo from '@/components/content/ContentVideo.astro'
+import Video from '@/components/content/ContentVideo.astro'
 
-<ContentVideo
-  src='wgQNEXFrkG0'
-  title='godot peppino pizza tower movement clone'
-/>
+<Video src='wgQNEXFrkG0' title='godot peppino pizza tower movement clone' />
