migrated from daisyUI themes

--- a/src/content/blog/smpearth/index.mdx
+++ b/src/content/blog/smpearth/index.mdx
@@ -295,7 +295,7 @@ My lapse in judgement opened the door for JoshA20 (and arguably AbsoluteMC depen
   retweets='105'
 />
 
-<small class='text-base-content opacity-75'>
+<small class='text-theme-content opacity-75'>
   Modern Chip here. Full disclosure, I have no idea who tweeted this. It
   could've been me, it could've been Wilbur, it could've been Josh. I just found
   it and thought it may be relevant.
