fix: discord component avatar

--- a/src/content/blog/smpearth/index.mdx
+++ b/src/content/blog/smpearth/index.mdx
@@ -186,7 +186,7 @@ Here's a transcription of a conversation between me and Wilbur Soot shortly afte
       'really frustrated with our host rn',
       "I know you're busy, so don't feel obligated to respond, but I feel like you may want to know that the server has been having connectivity issues for about a week. AbsoluteMC has known about the issue and claimed they were working on it, and when I checked in on them today they tried telling me that I never brought the problem up. not only that, they are just a reseller of another company's servers. I confirmed that the connectivity issues are being caused by AbsoluteMC, NOT the company they rent servers from.",
     ]}
-    avatar='/src/content/blog/smpearth/chip-pfp.webp'
+    avatar='/blog/smpearth/chip-pfp.webp'
     messageId='1'
   />
 
@@ -198,7 +198,7 @@ Here's a transcription of a conversation between me and Wilbur Soot shortly afte
   content={[
     "Thanks. Tomorrow you'll have a new team. Tell me who's good and who's bad and I'll make sure you can have the perfect set.",
   ]}
-  avatar='/src/content/blog/smpearth/wilbur-pfp.webp'
+  avatar='/blog/smpearth/wilbur-pfp.webp'
   messageId='2'
 />
 
@@ -384,7 +384,7 @@ I just don't think he was in it for the right reasons.
   content={[
     "He shifted blame on other people and falsely accused of things he was at fault for most of which chip has screenshots to counterpoint",
   ]}
-  avatar='/src/content/blog/smpearth/discord-pfp.webp'
+  avatar='/blog/smpearth/discord-pfp.webp'
   messageId='1'
 />
 <DiscordMessage
@@ -393,7 +393,7 @@ I just don't think he was in it for the right reasons.
   content={[
     'yeah he tries to pass the blame for not being able to run the server over to chip despite him saying he could handle it',
   ]}
-  avatar='/src/content/blog/smpearth/brody-pfp.webp'
+  avatar='/blog/smpearth/brody-pfp.webp'
   messageId='2'
 />
 <DiscordMessage
@@ -402,7 +402,7 @@ I just don't think he was in it for the right reasons.
   content={[
     "Techno lost his items due to a connection issue which chip at the time was refunding but when it was only josh online he told techno he wouldn't get his stuff back unless he followed him on Twitter",
   ]}
-  avatar='/src/content/blog/smpearth/discord-pfp.webp'
+  avatar='/blog/smpearth/discord-pfp.webp'
   messageId='3'
 />
 
@@ -512,7 +512,7 @@ It took awhile for any real resentment to build up, but what really kickstarted 
       'i mean paul he openly talked about smoking weed with a 15 year old',
       'grunk',
     ]}
-    avatar='/src/content/blog/smpearth/josha20-pfp.webp'
+    avatar='/blog/smpearth/josha20-pfp.webp'
     messageId='1'
   />
 </DiscordConversation>
@@ -527,7 +527,7 @@ Within hours of my dismissal, his public opinion towards me did a complete 180.
       "oh yeah. he's a horrible person",
       'he got all the credit, but actually done fuckall',
     ]}
-    avatar='/src/content/blog/smpearth/josha20-pfp.webp'
+    avatar='/blog/smpearth/josha20-pfp.webp'
     messageId='1'
   />
 </DiscordConversation>
@@ -563,7 +563,7 @@ And without the ability to defend myself, he started setting a new narrative.
       'and updated the map',
       'thats genuinely it',
     ]}
-    avatar='/src/content/blog/smpearth/josha20-pfp.webp'
+    avatar='/blog/smpearth/josha20-pfp.webp'
     messageId='1'
   />
 </DiscordConversation>
@@ -588,7 +588,7 @@ A lot of the original founding members of SMPEarth weren't happy with the way th
       'you said that you could handle the server on your own',
       'and everyone else said you could too',
     ]}
-    avatar='/src/content/blog/smpearth/grunk-pfp.webp'
+    avatar='/blog/smpearth/grunk-pfp.webp'
     messageId='1'
   />
   <DiscordMessage
@@ -599,21 +599,21 @@ A lot of the original founding members of SMPEarth weren't happy with the way th
       'theres no need',
       'create drama all you want',
     ]}
-    avatar='/src/content/blog/smpearth/josha20-pfp.webp'
+    avatar='/blog/smpearth/josha20-pfp.webp'
     messageId='2'
   />
   <DiscordMessage
     author='Grunk'
     date='Today at 10:21 PM'
     content={['so ur admitting that ur incompetent']}
-    avatar='/src/content/blog/smpearth/grunk-pfp.webp'
+    avatar='/blog/smpearth/grunk-pfp.webp'
     messageId='3'
   />
   <DiscordMessage
     author='JoshA20'
     date='Today at 10:22 PM'
     content={['Yeah, unfortunately', "I don't know left from right"]}
-    avatar='/src/content/blog/smpearth/josha20-pfp.webp'
+    avatar='/blog/smpearth/josha20-pfp.webp'
     messageId='4'
   />
   <DiscordMessage
@@ -623,7 +623,7 @@ A lot of the original founding members of SMPEarth weren't happy with the way th
       'when we needed you in invites you didnt respond for weeks',
       'if u know u couldnt run the server why did u say u could',
     ]}
-    avatar='/src/content/blog/smpearth/grunk-pfp.webp'
+    avatar='/blog/smpearth/grunk-pfp.webp'
     messageId='5'
   />
 </DiscordConversation>
@@ -644,7 +644,7 @@ After taking the entire server hostage and killing any momentum the Olympics fin
       '',
       "at this point i'm begging.",
     ]}
-    avatar='/src/content/blog/smpearth/josha20-pfp.webp'
+    avatar='/blog/smpearth/josha20-pfp.webp'
     messageId='1'
   />
 </DiscordConversation>
