feat(content): add 'this website' blog post and site attributions

--- a/src/content/blog/dotfiles/index.mdx
+++ b/src/content/blog/dotfiles/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Dotfiles'
-description: 'aka my adventure in configuration management'
+description: 'aka my adventure in macOS configuration management'
 publishDate: '2024-10-20'
 links:
   - label: 'github repo'
