--- a/src/content/blog/smpearth/index.mdx
+++ b/src/content/blog/smpearth/index.mdx
@@ -12,7 +12,7 @@ links:
     url: 'https://smpearth.fandom.com/wiki/SMPEarth'
   - label: 'map download (empty)'
     url: 'https://www.mediafire.com/file/7t3eik28arzatj1/smpe-map.zip/file'
-  - label: 'map download (no builds)'
+  - label: 'map download (w/ builds)'
     url: 'https://www.mediafire.com/file/2trxtxkhqicke1s/smpe-private-map.zip/file'
 icon: 'lucide:earth'
 tags:
