feat(components): add contentHeading component with enhanced metadata display

--- a/src/content/blog/this-website/index.mdx
+++ b/src/content/blog/this-website/index.mdx
@@ -7,7 +7,7 @@ tags:
   - astro
   - development
 links:
-  - label: 'github repository'
+  - label: 'repo'
     url: 'https://github.com/fractalcounty/fractalcounty.com'
 icon: 'lucide:code'
 thumbnail: './astro.webp'
