--- a/src/content/blog/dotfiles/index.mdx
+++ b/src/content/blog/dotfiles/index.mdx
@@ -1,9 +1,10 @@
 ---
 title: 'Dotfiles'
 description: 'aka my adventure in macOS configuration management'
+subtitle: 'Adventures in configuration management with fish shell and git'
 publishDate: '2024-10-20'
 links:
-  - label: 'github repo'
+  - label: 'repo'
     url: 'https://github.com/fractalcounty/dotfiles'
 tags:
   - dotfiles
