--- a/src/content/blog/smpearth/index.mdx
+++ b/src/content/blog/smpearth/index.mdx
@@ -8,11 +8,9 @@ thumbnailStyle: true
 thumbnailCaption: "SMPEarth's dynmap, circa Christmas 2019"
 thumbnailCaptionType: 'alt'
 links:
-  - label: 'wiki'
-    url: 'https://smpearth.fandom.com/wiki/SMPEarth'
-  - label: 'map download (empty)'
+  - label: 'map (empty)'
     url: 'https://www.mediafire.com/file/7t3eik28arzatj1/smpe-map.zip/file'
-  - label: 'map download (w/ builds)'
+  - label: 'map (builds)'
     url: 'https://www.mediafire.com/file/2trxtxkhqicke1s/smpe-private-map.zip/file'
 icon: 'lucide:earth'
 tags:
